Add edit train way

--- a/src/main/webapp/static/css/city2.css
+++ b/src/main/webapp/static/css/city2.css
@@ -6,8 +6,10 @@
 }
 
 body{
-    background: url("/static/image/train.jpg");
+    background-image: url("/static/image/train.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 .button-main{
     /*width: 100%;*/
